<resources>
    <string name="app_name">Индекс цен на Bitcoin</string>
    <string name="start_date">от</string>
    <string name="between_date">по</string>
    <string name="end_date">до</string>
    <string name="enter_date">Введите дату:</string>
    <string name="enter_currency">Введите валюту:</string>
    <string name="last_update">Последнее обновление</string>
    <string name="standard_currency">USD</string>
    <string name="empty_text_view">________</string>
    <string name="show">Посмотреть</string>
    <string name="current_price">Текущая цена:</string>
    <string name="graph_construct_title">Фильтр для графика</string>
    <string name="default_value_price">0 USD</string>
</resources>
