<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.MainActivity">

        <LinearLayout
            android:id="@+id/currency_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/enter_currency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1.0"
                android:gravity="center_vertical"
                android:text="@string/enter_currency"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/enter_currency_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@drawable/corner"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/standard_currency"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/date_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/currency_layout"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/enter_date"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1.0"
                android:gravity="center_vertical"
                android:text="@string/enter_date"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:gravity="center"
                    android:text="@string/start_date"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/enter_start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:clickable="true"
                    android:focusable="false"
                    android:editable="false"
                    android:enabled="true"
                    android:gravity="center"
                    android:inputType="none"
                    android:text=""
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:gravity="center"
                    android:text="@string/between_date"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/enter_end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:clickable="true"
                    android:focusable="false"
                    android:editable="false"
                    android:enabled="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center"
                    android:inputType="none"
                    android:text=""
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/button_show"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/date_layout"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:background="@drawable/button_background"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/show"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:layout_below="@+id/button_show"
            android:background="@color/colorPrimaryDark" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/separator">

            <TextView
                android:id="@+id/disclaimer_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="fill"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/graph_bar_chart"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_below="@+id/disclaimer_text"
                android:layout_marginTop="15dp" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:visibility="gone"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp" />

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>
